src/components/header/_header.scss
.header {
    width: 100%;
    margin: 30px 0 20px;
    height: 60px;
    &-content {
        display: flex;
        align-items: baseline;
        justify-content: space-between;
    }
    &-nav-list {
        margin: 0;
        padding: 0;
        list-style-type: none;
        display: flex;
        align-items: baseline;
        justify-content: flex-end;
        &-item {
            margin-left: 10px;
        }
    }
}

